--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: "Asia/Shanghai"
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://cybernotbook.pages.dev
+url: https://test-bolg.pages.dev
 # url: http://localhost
 permalink: :year/:month/:day/:title/
 permalink_defaults:
